--- a/index.html
+++ b/index.html
@@ -197,6 +197,12 @@
     <p>Unlock a full suite of AI tools for websites, content creation, design, and more – all in one place. <span style="color:#f97316; font-weight: bold;">Use my exclusive link and get the best deal available!</span></p>
     <a href="https://galaxy.ai/?ref=robertn4" target="_blank">Check Out the AI Builder Deal</a>
   </section>
+  <section class="instructions" style="margin: 12px auto; padding: 12px;">
+    <h4>Step 4 Optional</h4>
+    <ul>
+      <li>If you need to change anything on the website or just dont like something, go back to ChatGPT and ask it to make changes for you! Just type out the instructions and it will update the code accordingly!</li>
+    </ul>
+  </section>
   <section>
     <h3>Bonus Info</h3>
     <p>If you plan on doing anymore coding in the future, you can <a href="https://code.visualstudio.com/download" target="_blank">download VS Code</a> for free and install it. I may do future videos to show you how to enhance/customize your code even further!</p>
