Update footer with copyright information

--- a/index.html
+++ b/index.html
@@ -207,8 +207,9 @@
     <h3>Bonus Info</h3>
     <p>If you plan on doing anymore coding in the future, you can <a href="https://code.visualstudio.com/download" target="_blank">download VS Code</a> for free and install it. I may do future videos to show you how to enhance/customize your code even further!</p>
   </section>
-<footer style="height: 200px;">
-
+<footer style="height: 200px; display: flex; justify-content: center; align-items: center; flex-direction: column;">
+  <p>© 2023 Camping Website Builder</p>
+  <p>Created with ❤️ using AI tools</p>
 </footer>
 <script src="script.js"></script>
 </body>
