--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <a href="https://galaxy.ai/?ref=robertn4" target="_blank">Check Out the AI Builder Deal</a>
   </section>
   <section class="instructions" style="margin: 12px auto; padding: 12px;">
-    <h4>Step 4 Optional</h4>
+    <h4>Step 4 (Optional)</h4>
     <ul>
       <li>If you need to change anything on the website or just dont like something, go back to ChatGPT and ask it to make changes for you! Just type out the instructions and it will update the code accordingly!</li>
     </ul>
@@ -208,7 +208,7 @@
     <p>If you plan on doing anymore coding in the future, you can <a href="https://code.visualstudio.com/download" target="_blank">download VS Code</a> for free and install it. I may do future videos to show you how to enhance/customize your code even further!</p>
   </section>
 <footer style="height: 200px; display: flex; justify-content: center; align-items: center; flex-direction: column;">
-  <p>© 2023 Camping Website Builder</p>
+  <p>© 2025 ChatGPT Website in under 5 minutes</p>
   <p>Created with ❤️ using AI tools</p>
 </footer>
 <script src="script.js"></script>
